# guidance

./: .gitignore  mtest.py  pyproject.toml  setup.py
guidance/_rust/: Cargo.toml
guidance/_rust/src/: lib.rs
guidance/models/: _model.py
